Сделал первую интеграцию C++ в Kotlin

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,6 @@
             </intent-filter>
         </activity>
 
-        <service android:name=".service.CalculateService"/>
+        <service android:name=".service.CalculateTimeKotlinService"/>
     </application>
 </manifest>
