Добавил таску в градл и добавил сервис в манифест

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,5 +24,6 @@
         </activity>
 
         <service android:name=".service.CalculateTimeKotlinService"/>
+        <service android:name=".service.CalculateTimeCppService"/>
     </application>
 </manifest>
