Добавил плюсовую хэш функцию

--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -1,9 +1,21 @@
 cmake_minimum_required(VERSION 3.6.0)
-
+set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")
 add_library (
         native-lib
         SHARED
         native-lib.cpp
+)
+
+add_library (
+        sha-lib
+        SHARED
+        Sha256.cpp
+)
+
+add_library (
+        converter-lib
+        SHARED
+        Converter.cpp
 )
 
 find_library(
@@ -11,11 +23,9 @@ find_library(
         log
 )
 
-add_library(ssl STATIC IMPORTED)
-set_target_properties(ssl
-        PROPERTIES IMPORTED_LOCATION ${CMAKE_SOURCE_DIR}/libs/${ANDROID_ABI}/libssl.a)
-
 target_link_libraries(
         native-lib
+        sha-lib
+        converter-lib
         ${log-lib}
 )
